# password-generator

./: .gitignore  CMakeLists.txt
include/: customLbl.h  generate.h  mainwindow.h
src/: customLbl.cpp  generate.cpp  main.cpp  mainwindow.cpp
